--- a/fronctend/app/globals.css
+++ b/fronctend/app/globals.css
@@ -59,7 +59,7 @@
 }
 
 .library-bg {
-  background-image: url("/placeholder.svg?height=800&width=1200");
+  background-image: url("/images/bibliothèque.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
